package com.enhui.design.decorator;

/**
 * @Author 胡恩会
 * @Date 2020/6/25 10:32
 **/
public abstract class GameObject {
    public abstract void pagit();
}
