package com.enhui.design.decorator;

/**
 * @Author 胡恩会
 * @Date 2020/6/25 10:32
 **/
public class Tank extends GameObject {
    @Override
    public void pagit() {
        System.out.println("坦克描绘自己方法");
    }
}
