package com.enhui.design.decorator;

/**
 * @Author 胡恩会
 * @Date 2020/6/25 10:32
 **/
public class Bullet extends GameObject {
    @Override
    public void pagit() {
        System.out.println("子弹描绘自己的方法");
    }
}
